Update mongodb atlas

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 CLIENT_URL=http://localhost:5173
-MONGODB_USERNAME=riteshkumarsahu1345
-MONGODB_PASSWORD=8SU9721I4lcfenyE
+# MONGODB_USERNAME=riteshkumarsahu1345
+# MONGODB_PASSWORD=8SU9721I4lcfenyE
+MONGODB_URI=mongodb+srv://riteshkumarsahu1345:<db_password>@cluster0.ag9bxwz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
